add tests + annotationen check